<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Missed Calls Notification</string>

    <!-- General -->
    <string name="notification_type_label">Notify by:</string>
    <string name="notification_type_mail">Mail</string>
    <string name="notification_type_sms">SMS</string>
    <string name="preferences_label">Preferences</string>
    <string name="notifications_label">Notifications</string>
    <string name="button_save">Save</string>
    <string name="title_header">Missed Call Notifications</string>
    <string name="loading_label">Loading</string>

    <!-- Home -->
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>

    <!-- Preferences -->
    <string name="destinations_label">Destinations</string>
    <string name="actual_mail">Actual mail:</string>
    <string name="actual_sms">Actual number:</string>
    <string name="new_mail_hint">New mail</string>
    <string name="new_sms_hint">New number</string>
    <string name="more_configurations">More configurations</string>
    <string name="actual_delay_label">Actual delay time:</string>
    <string name="actual_delay_notdefined">Not defined</string>
    <string name="preferences_saved">Preference successfully saved!</string>
    <string name="mail_saved_message">Mail successfully saved!</string>
    <string name="sms_saved_message">Number successfully saved!</string>
    <string name="wait_time_label">>> Delay time:</string>
    <string name="wait_time_immediately">Just after</string>
    <string name="wait_time_15minutes">15 minutes</string>
    <string name="wait_time_30minutes">30 minutes</string>
    <string name="wait_time_60minutes">60 minutes</string>

    <!-- List -->
    <string name="image_listtab_description">Notification type</string>
    <string name="image_listtab_options">Options</string>

    <!-- Main tab -->
    <string name="tab_tosend_label">To send</string>
    <string name="tab_sent_label">Sent</string>
    <string name="tab_error_label">Error</string>
    <string name="list_option_call">Call</string>
    <string name="list_option_sms">SMS</string>
    <string name="list_option_delete">Delete</string>

    <!-- To send tab -->
    <string name="list_option_sendnow">Send now</string>

    <!-- Sent tab -->
    <string name="list_option_sendaagain">Send again</string>

    <!-- Error tab -->
    <string name="list_option_tryagain">Try again</string>

    <!-- Mail notification -->
    <string name="mail_body_1">You\'ve received a missed call from:</string>
    <string name="mail_body_2">at</string>
    <string name="mail_subject">You\'ve received a missed call</string>

    <!-- SMS notification -->
    <string name="sms_body_1">Missed call from:</string>
    <string name="sms_body_2">at</string>

    <!-- Phone types -->
    <string name="type_phone_home">Home</string>
    <string name="type_phone_mobile">Mobile</string>
    <string name="type_phone_work">Work</string>
    <string name="type_phone_mobile_work">Mobile work</string>

</resources>